Do not cache `customer_return` partial in the order view

--- a/admin/app/views/spree/admin/orders/_customer_returns.html.erb
+++ b/admin/app/views/spree/admin/orders/_customer_returns.html.erb
@@ -17,8 +17,7 @@
           </thead>
           <tbody>
             <%= render partial: "spree/admin/orders/customer_returns/customer_return",
-            collection: @customer_returns,
-            cached: spree_base_cache_scope %>
+            collection: @customer_returns %>
           </tbody>
         </table>
       </div>
