--- a/admin/app/views/spree/admin/products/edit.html.erb
+++ b/admin/app/views/spree/admin/products/edit.html.erb
@@ -1,20 +1,36 @@
 <% content_for :page_actions_dropdown do %>
   <%= link_to_edit_translations(@product) %>
+  <%= link_to_with_icon(
+    "file",
+    Spree.t(:digital_assets),
+    spree.admin_product_digitals_path(@product),
+    class: "dropdown-item",
+  ) %>
   <%= external_page_preview_link(@product) %>
 
   <% if can?(:clone, @product) %>
-    <%= link_to_with_icon('copy', Spree.t(:clone), spree.clone_admin_product_path(@product), class: 'dropdown-item', data: { turbo_method: :post }) %>
+    <%= link_to_with_icon(
+      "copy",
+      Spree.t(:clone),
+      spree.clone_admin_product_path(@product),
+      class: "dropdown-item",
+      data: {
+        turbo_method: :post,
+      },
+    ) %>
   <% end %>
 <% end %>
 
-<%= render partial: 'spree/admin/shared/error_messages', locals: { target: @product } %>
+<%= render partial: "spree/admin/shared/error_messages",
+locals: {
+  target: @product,
+} %>
 
 <% content_for :page_title do %>
-  <%= render 'spree/admin/products/edit_page_title' %>
+  <%= render "spree/admin/products/edit_page_title" %>
 <% end %>
 
 <%= form_for [:admin, @product] do |f| %>
-  <%= render 'form', f: f %>
-  <%= render 'spree/admin/shared/edit_resource_links', f: f %>
+  <%= render "form", f: f %>
+  <%= render "spree/admin/shared/edit_resource_links", f: f %>
 <% end %>
-
