--- a/admin/app/views/spree/admin/shipping_methods/_form.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/_form.html.erb
@@ -112,7 +112,7 @@
     <% end %>
   </div>
   <div class="col-lg-6">
-    <%= render partial: 'spree/admin/shared/calculator_fields', locals: { f: f } %>
+    <%= render partial: 'spree/admin/shared/calculator_fields', locals: { f: f, calculators: @calculators } %>
 
     <div class="card mb-4 tax_categories">
       <div class="card-header">
