--- a/admin/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/admin/app/views/spree/admin/tax_rates/_form.html.erb
@@ -45,4 +45,4 @@
   </div>
 </div>
 
-<%= render 'spree/admin/shared/calculator_fields', f: f %>
+<%= render 'spree/admin/shared/calculator_fields', f: f, calculators: @calculators %>
