--- a/admin/app/views/spree/admin/products/edit.html.erb
+++ b/admin/app/views/spree/admin/products/edit.html.erb
@@ -2,7 +2,7 @@
   <%= link_to_edit_translations(@product) %>
   <%= link_to_with_icon(
     "file",
-    Spree.t(:digital_assets),
+    Spree.t("digital.assets"),
     spree.admin_product_digitals_path(@product),
     class: "dropdown-item",
   ) %>
