--- a/admin/app/views/spree/admin/digitals/edit.html.erb
+++ b/admin/app/views/spree/admin/digitals/edit.html.erb
@@ -2,7 +2,7 @@
   <%= form_for :digital, url: spree.admin_product_digital_path(@product, @digital), method: :put do |f| %>
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t("admin.digitals.edit") %></h5>
+        <h5 class="modal-title" id="exampleModalLabel"><%= @digital.name %></h5>
         <button
           type="button"
           class="btn-close"
