--- a/admin/app/views/spree/admin/digital_assets/_form.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/_form.html.erb
@@ -14,5 +14,5 @@
              class: "custom-select" %>
   </div>
 <% else %>
-  <%= hidden_field_tag "digital[variant_id]", @product.master.id %>
+  <%= hidden_field_tag "digital_asset[variant_id]", @product.master.id %>
 <% end %>
