--- a/admin/app/views/spree/admin/digital_assets/index.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/index.html.erb
@@ -1,15 +1,15 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.admin_product_path(@product) %>
   <span class="mr-3"><%= @product.name %></span>
-  <span><%= Spree.t("digital.assets") %></span>
+  <span><%= Spree.t("digital_assets") %></span>
 <% end %>
 
 <% content_for :page_actions do %>
   <% if can?(:create, Spree::Digital.new(variant: @product.default_variant)) %>
     <span data-toggle="modal" data-target="#modal">
       <%= link_to_with_icon "plus",
-      Spree.t("admin.digitals.new"),
-      new_object_url,
+      Spree.t("admin.digital_assets.new"),
+      spree.new_admin_product_digital_asset_path(@product),
       class: "btn btn-primary",
       data: {
         turbo_frame: "dialog_modal",
@@ -20,10 +20,8 @@
 
 <div class="card p-0">
   <div class="card-body p-0">
-    <div class="table-responsive">
-      <%= turbo_frame_tag @product, :digitals do %>
-        <%= render "spree/admin/digitals/table" %>
-      <% end %>
+    <div class="table-responsive" id="<%= dom_id(@product, :digital_assets) %>">
+      <%= render "spree/admin/digital_assets/table" %>
     </div>
   </div>
 </div>
