--- a/admin/app/views/spree/admin/digital_assets/edit.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/edit.html.erb
@@ -2,7 +2,7 @@
   <%= form_for :digital_asset, url: spree.admin_product_digital_asset_path(@product, @digital_asset), method: :put do |f| %>
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t("admin.digital_assets.edit") %></h5>
+        <h5 class="modal-title" id="exampleModalLabel"><%= @digital_asset.attachment.filename %></h5>
         <button
           type="button"
           class="btn-close"
