--- a/admin/app/views/spree/admin/digital_assets/new.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/new.html.erb
@@ -2,7 +2,7 @@
   <%= form_for :digital_asset, url: spree.admin_product_digital_assets_path(@product) do |f| %>
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t("admin.digital_assets.new") %></h5>
+        <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t(:new_digital_asset) %></h5>
         <button
           type="button"
           class="btn-close"
