Use `:digital_assets` translation everywhere

--- a/admin/app/views/spree/admin/products/edit.html.erb
+++ b/admin/app/views/spree/admin/products/edit.html.erb
@@ -2,7 +2,7 @@
   <%= link_to_edit_translations(@product) %>
   <%= link_to_with_icon(
     "file",
-    Spree::Digital.model_name.human(count:2),
+    Spree.t(:digital_assets),
     spree.admin_product_digital_assets_path(@product),
     class: "dropdown-item",
   ) %>
