--- a/admin/app/views/spree/admin/digital_assets/_table.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/_table.html.erb
@@ -33,7 +33,7 @@
               text-muted p-5 d-flex align-items-center w-100 justify-content-center
             "
           >
-            <%= Spree.t(:no_resource_found, resource: Spree::Digital.model_name.human(count: 2)) %>
+            <%= Spree.t(:no_resource_found, resource: Spree.t(:digital_assets)) %>
             <% if can?(:create, Spree::Digital.new(variant: @product.default_variant)) %>
               <span data-toggle="modal" data-target="#modal">
                 <%= link_to_with_icon "plus",
