--- a/admin/app/views/spree/admin/digital_assets/update.turbo_stream.erb
+++ b/admin/app/views/spree/admin/digital_assets/update.turbo_stream.erb
@@ -2,7 +2,5 @@
 <%= turbo_close_modal %>
 
 <%= turbo_stream.replace dom_id(@digital_asset) do %>
-  <%= render "spree/admin/digital_assets/digital_asset",
-  digital_asset: @digital_asset,
-  product: @product %>
+  <%= render "spree/admin/digital_assets/digital_asset", digital_asset: @digital_asset %>
 <% end %>
