--- a/admin/app/views/spree/admin/digital_assets/_table.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/_table.html.erb
@@ -10,21 +10,8 @@
     </tr>
   </thead>
   <tbody>
-    <% if @product.has_variants? %>
-      <% @product.variants.includes(digitals: {attachment_attachment: [:blob]}).each do |variant| %>
-        <% variant.digitals.each do |digital_asset| %>
-          <%= render "spree/admin/digital_assets/digital_asset",
-          product: @product,
-          digital_asset: digital_asset %>
-        <% end %>
-      <% end %>
-    <% else %>
-      <% @product.master.digitals.includes( attachment_attachment: [:blob]).each do |digital_asset| %>
-        <%= render "spree/admin/digital_assets/digital_asset",
-        product: @product,
-        digital_asset: digital_asset %>
-      <% end %>
-    <% end %>
+    <%= render partial: "spree/admin/digital_assets/digital_asset",
+    collection: @product.digitals.includes(:variant, attachment_attachment: [:blob]), cached: spree_base_cache_scope %>
     <% if @product.digitals.empty? %>
       <tr>
         <td colspan="4">
