--- a/admin/app/views/spree/admin/promotions/_sidebar.html.erb
+++ b/admin/app/views/spree/admin/promotions/_sidebar.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
             <%= Spree.t(:name) %>
           </span>
@@ -46,7 +46,7 @@
           </span>
         </li>
 
-        <li class="list-group-item d-flex justify-content-between">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
             <%= Spree.t(:kind) %>
           </span>
@@ -56,17 +56,17 @@
         </li>
 
         <% if @promotion.code.present? %>
-          <li class="list-group-item d-flex justify-content-between" data-controller="clipboard" data-clipboard-success-content="Copied!">
-            <%= Spree.t(:coupon_code) %>
-            <span>
-              <span class="p-2 bg-light rounded mr-2 h-100">
+          <li class="list-group-item d-flex justify-content-between align-items-center" data-controller="clipboard" data-clipboard-success-content="Copied!">
+            <span class="text-muted"><%= Spree.t(:coupon_code) %></span>
+            <div class="d-flex align-items-center gap-1">
+              <span class="form-control form-control-sm">
                 <span data-clipboard-target="source"><%= @promotion.code.upcase %></span>
               </span>
 
               <button type="button" class="btn btn-light btn-sm with-tip p-1" data-action="clipboard#copy" title="<%= Spree.t(:copy) %>">
                 <%= icon 'copy', class: 'mr-0' %>
               </button>
-            </span>
+            </div>
           </li>
         <% end %>
       </ul>
@@ -85,12 +85,12 @@
     <div class="card-body">
       <ul class="list-group">
         <% unless @promotion.multi_codes? %>
-          <li class="list-group-item d-flex justify-content-between">
-            <%= Spree.t(:usage_limit) %>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span class="text-muted"><%= Spree.t(:usage_limit) %></span>
             <%= render 'spree/admin/promotions/usage_limit', promotion: @promotion %>
           </li>
         <% end %>
-        <li class="list-group-item d-flex justify-content-between">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
             <%= I18n.t('activerecord.attributes.spree/promotion.starts_at') %>
           </span>
@@ -100,14 +100,14 @@
             <span class="text-muted"><%= Spree.t(:no_start_date) %></span>
           <% end %>
         </li>
-        <li class="list-group-item d-flex justify-content-between">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="text-muted">
             <%= I18n.t('activerecord.attributes.spree/promotion.expires_at') %>
           </span>
           <% if @promotion.expires_at %>
             <span><%= local_time(@promotion.expires_at) %></span>
           <% else %>
-            <span class="text-muted"><%= Spree.t(:no_expiration) %></span>
+            <span class="text-muted"><%= Spree.t(:not_available) %></span>
           <% end %>
         </li>
       </ul>
