--- a/admin/app/views/spree/admin/promotions/_usage_limit.html.erb
+++ b/admin/app/views/spree/admin/promotions/_usage_limit.html.erb
@@ -1,11 +1,11 @@
 <% if promotion.multi_codes? %>
-  <span class="badge badge-light">
+  <span class="badge <% if promotion.all_codes_used? %>badge-danger<% else %>badge-info<% end %>">
     <%= promotion.coupon_codes.used.count %>
     /
     <%= promotion.coupon_codes.count %>
   </span>
 <% else %>
-  <span class="badge badge-light">
+  <span class="badge <% if promotion.credits_count == promotion.usage_limit %>badge-danger<% else %>badge-info<% end %>">
     <%= promotion.credits_count %>
     /
     <%= promotion.usage_limit || '∞' %>
