--- a/admin/app/views/spree/admin/orders/_payments.html.erb
+++ b/admin/app/views/spree/admin/orders/_payments.html.erb
@@ -29,7 +29,7 @@
             <span class="text-success font-weight-normal"><%= icon('check') %> <%= Spree.t(:not_risky) %></span>
           <% end %>
         </span>
-        <%= link_to '#risk-analysis', class: 'btn btn-light btn-sm text-muted', data: { toggle: 'collapse' } do %>
+        <%= link_to '#risk-analysis', class: 'btn btn-light btn-sm', data: { toggle: 'collapse' } do %>
           <%= Spree.t(:show_details) %>
           <%= icon('selector', height: 12, class: 'mr-0 ml-1') %>
         <% end %>
