--- a/admin/app/views/spree/admin/assets/edit.html.erb
+++ b/admin/app/views/spree/admin/assets/edit.html.erb
@@ -10,7 +10,7 @@
       <div class="modal-body pb-0" data-turbo-permanent id="asset-<%= @asset.key.parameterize %>">
         <%= render 'active_storage/upload_form', form: f, field_name: :attachment, width: 200, height: 200, can_delete: false %>
       </div>
-      <div class="modal-body border-bottom pb-3" style="min-height: 200px">
+      <div class="modal-body" style="min-height: 200px">
         <div class="form-group">
           <%= f.label :alt, Spree.t(:alt_text) %>
           <%= f.text_area :alt, rows: 4, class: 'form-control' %>
