--- a/admin/app/views/spree/admin/shared/_multi_product_picker.html.erb
+++ b/admin/app/views/spree/admin/shared/_multi_product_picker.html.erb
@@ -4,7 +4,7 @@
       <h5 class="modal-title" id="exampleModalLabel"><%= Spree.t(:add_products) %></h5>
       <button type="button" class="btn-close" data-dismiss="modal" aria-label="<%= Spree.t(:close) %>" />
     </div>
-    <div class="modal-body border-bottom pb-3">
+    <div class="modal-body">
       <%= form_with url: spree.search_admin_products_path, method: :post, data: { controller: 'auto-submit'} do |form| %>
         <%= form.hidden_field :omit_ids, value: parent.product_ids.join(',') %>
         <%= form.search_field :q, value: params[:q], class: 'form-control', data: { search_picker_target: :search, action: 'auto-submit#submit' }, autofocus: true %>
@@ -18,7 +18,7 @@
           </p>
         </div>
       </div>
-      <div class="modal-footer border-top">
+      <div class="modal-footer">
         <%= turbo_save_button_tag Spree.t(:add_selected_products), class: 'btn btn-primary', disabled: true, data: { search_picker_target: :submit } %>
       </div>
     <% end %>
